# Race_Manager

./: README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: nutrition_products.json
data/routes/: Dropper.gpx  Krawendelrunde .gpx  Ultra_Bike_WorldCup_2025.gpx  Ultrabike_Speed.gpx  Ultrabike_Ultra.gpx  Waldhaus_Bike-Marathon.gpx
data/trainings/2665e6fe-04c2-4593-9e87-ec2e3f1e20ac/: Waldhaus_Marathon (1).gpx
data/trainings/78a64264-172b-47ab-b7b2-d16050a24f9c/: Fahrt_am_Nachmittag.gpx  Wespe_im_Helm_uncool_.gpx
data/trainings/dc313d1e-a522-45e9-80eb-bf2663bf3847/: Dropper_IBK.gpx  FTP_Test.gpx  Wenn_die_Lunge_nach_12_min_den_Geist_aufgibt_.gpx
modules/: athletenverwaltung.py  ernaehrungsdaten.py  streckenanalys.py  trainingsanalys.py  visualisierungen.py
