[project]
name = "Race_Manager"
version = "0.1.0"
description = "MTB Race Manager – Pacing und Verpflegungsstrategie für Rennen"
authors = [
    {name = "Moritz Simon", email = "mosischule2@gmail.com"},
    {name = "Elischa Weber", email = "we1112@mci4me.at"},
]
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=3.0.3",
    "numpy>=1.26.0",
    "plotly>=5.18.0",
    "gpxpy>=1.6.0",
    "fpdf2>=2.7.9",
    "Pillow>=10.1.0",
    "kaleido>=0.2.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "streamlit run main.py"
